增加数据库链接

--- a/SchoolBusWXWeb/Views/SchoolBus/Register.cshtml
+++ b/SchoolBusWXWeb/Views/SchoolBus/Register.cshtml
@@ -76,7 +76,7 @@
                 </div>
             </div>
             <div class="agree mui-input-row mui-checkbox mui-left">
-                <input id="checkbox" name="checkbox" type="checkbox" v-model="isAgree">
+                <input id="checkbox" name="checkbox" type="checkbox" checked="checked">
                 <p> 我已经同意<a onclick="popoverClick('#div')" href="javascript:;"> 服务条款</a></p>
             </div>
             <button type="button" click="doRegister()" class=" btn mui-btn mui-btn-warning">马上注册</button>
